Mejorando README y creando texto de ayuda

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,10 +46,10 @@ endif()
 
 add_subdirectory(src/manageTask)
 
-add_executable (app main.cpp)
+add_executable (dtask main.cpp)
 # add_executable (appTest test/main.cpp)
 
-target_link_libraries(app PUBLIC ManageTask)
+target_link_libraries(dtask PUBLIC ManageTask)
 
 # - At the en of CMakeLists.txt I add test files
 if (INCLUDE_GOOGLE_TEST)
