Configuración a través de config.ini y añadido resaltado en tareas

--- a/src/manageTask/CMakeLists.txt
+++ b/src/manageTask/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(ManageTask STATIC
 	src/manageTaskFile.cpp
 	src/manageTask.cpp
 	src/taskCLI.cpp
+	src/taskConfig.cpp
 )
 
 target_include_directories(ManageTask PUBLIC include)
